// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should handle a global include 1`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should handle a global include 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    \\"src/global.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ],
    \\"src/index.ts:645618020\\": [
      [0, 0, 7, \\"RegExp match\\", \\"645618020\\"]
    ]
  }\`
};
"
`;

exports[`betterer should handle a global include 3`] = `
Array [
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (0ms): 1 test running...
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! (1 issue) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "Checking 2 files... 🤔

・ <project>/fixtures/include-global/global.ts
・ <project>/fixtures/include-global/src/global.ts

🌟 Betterer (0ms):
",
  "Checking 2 files... 🤔

・ <project>/fixtures/include-global/global.ts
・ <project>/fixtures/include-global/src/global.ts

🌟 Betterer (0ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "Checking 2 files... 🤔

・ <project>/fixtures/include-global/global.ts
・ <project>/fixtures/include-global/src/global.ts

🌟 Betterer (0ms): 1 test running...
✅ test: \\"test\\" got force updated. (1 new issue, 2 total) 🆙
",
  "Checking 2 files... 🤔

・ <project>/fixtures/include-global/global.ts
・ <project>/fixtures/include-global/src/global.ts

🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got force updated. (1 new issue, 2 total) 🆙
・ New issue in \\"<project>/fixtures/include-global/src/global.ts\\"!
・
・   <project>/fixtures/include-global/src/global.ts
・ > 1 | // Hack
・     | ^^^^^^^ RegExp match
・
",
  "Checked 2 files! 🔍

・ <project>/fixtures/include-global/global.ts
・ <project>/fixtures/include-global/src/global.ts

🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got force updated. (1 new issue, 2 total) 🆙
・ New issue in \\"<project>/fixtures/include-global/src/global.ts\\"!
・
・   <project>/fixtures/include-global/src/global.ts
・ > 1 | // Hack
・     | ^^^^^^^ RegExp match
・

1 test got checked. 🤔
1 test got force updated. 🆙
",
]
`;
